k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gcs-fileserver
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: web
  selector:
    app: gcs-fileserver
